--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,42 @@
 *{
     box-sizing: border-box;
 }
-body{
+html,body{
     background-color: white;
     margin: 0;
+    height: 100%;
 }
 header{
     padding: 0px  40px; /*上下  左右*/
-    background-color: #f6f6f6;
+    background-color: hwb(53 81% 2%);
     border-top: 10px solid black;
+    border-bottom: 10px solid #df8c2c;
+    font-family: "Titan One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 footer{
     background-color: orange;
     width: 100%;
     height: 50px;
     padding: 0px; /*上右下左*/
-    /* margin-top: 220px; */
+    /* margin-top: -50px; */
     /* margin: 10px;  /*上右下左 */
     /*border: 1px solid black;/*邊框 : 線條粗細 線條類型 線條顏色*/
+}
+.main-content{
+    min-height: 100%;
 }
 .container{
     max-width: 1170px;
     width: 80%;
     margin: auto;/*在不同裝置下都可以置中*/   
+    
 }
 .container-footer{
-    max-width:1170px;
-    width:80%;
-    margin-top: 50px;
+    /* max-width:1170px;
+    width:80%; */
+    margin-top: 0px;
     margin-left: 30%;
 }
 .clearfix::after{
@@ -67,25 +76,20 @@ nav>ul>li{
     /* background: yellow; */
 }
 /* =======規則 */
-/* .rules-container {
+.rules-container {
     display: none;
-    background-color: var(--light-grey);
-    color: var(--black);
+    background-color:rgb(185, 185, 254);
+    background-image: linear-gradient(to right bottom, #0000ff, #4b0082);
+    color: rgb(255, 255, 255);
     width: 50%;
     margin: 20px auto;
-    height: 300px;
-    border-radius: 10px;
+    height: 40%;
+    border-radius: 15px;
     overflow-y: scroll;
-  } */
-  /* h2{
-    /* background-color: aqua; */
-
-
-  .rules-container{
-background-color: lightgoldenrodyellow;
-width: 50%;
-margin: 20px auto;
+    font-weight: 900;
+    font-size: 150%;
   }
+
 .rules-container ul {
     list-style-type: none;
   }
@@ -137,6 +141,21 @@ margin: 20px auto;
     width: 100%;
     padding: 10px;
 }
+/* @media(max-width:767px){
+    .col-3,.col-4,.col-2{width: 50%;}
+} */
+@media(max-width:575px){
+    .col-1{width: 15%;}
+}
+@media(min-width:576px){
+    .sp-picture{display: none; }
+}
+.w-100{
+    width: 100%;
+}
+.w-75{
+    width: 75%;
+}
 /* =======規則 */
 
 /* .rules-container {
@@ -152,29 +171,330 @@ margin: 20px auto;
   /* .rules-container ul {
     list-style-type: none;
   } */
-/* =======按鈕 */
+/* =======規則&出拳按鈕 */
 .btn {
     cursor: pointer;
-    width: 100px;
+    width: 25%;
+    height: 35px;
     margin: 10px center;
-    border-width: 3px;
-    justify-content: center;
+    border-width: 6px;
+    border: 6px solid #feac32;
+    background-image: linear-gradient(to top, gold, orange);
+    background-color: #feac32;
   }
+.btn:hover{
+    background-image: linear-gradient(to top, gold,#f3ae2e );
+    box-shadow:rgba(50,50,93,0.25) 0px 2px 0px -1px,rgba(0,0,0,0.3) 0px 3px 3px -1px ;
+    transform: scale(1.02);
+}
+
 .btn-block{
     display: flex;
     justify-content: center;
-    
+    margin-top: 5px;  
+}
+.btn-rule-block{
+    display: flex;
+    justify-content: center; 
+}
+.btn-shadow{
+    box-shadow: rgba(50,50,93,0.25) 1px 6px 11px -2px,rgba(0,0,0,0.3) 1px 6px 4px -2px ;
+    background-color: #fffde8ec;
+}
+.overflow-hidden{
+    overflow: hidden; /*溢出: 隱藏*/
 }
 /* =======輸入框 */
-/* input[type="text"], input[type="email"], input[type="date"], input[type="file"],select, textarea{
+input[type="text"]{
     width: 100%;
-    border: 1px solid lightgray;
+    border: 1px solid black;
     margin-bottom: 20px;
     padding: 10px;
     margin-top: 10px;
     border-radius: 8px;
-} */
+    
+}
 /* =======其他 */
 .bg-texture{
-    background-image: url('./img/let-there-be-sun.webp');
+    background-image: url('./img/spikes.webp');
 }
+.bg-texture2{
+    background-image: url('./img/spikes.webp');
+}
+/* 輪播圖=============================== */
+/* Slideshow container */
+.slideshow-container {
+    max-width: 1000px;
+    position: relative;
+    margin: auto;
+  }
+  
+  /* Hide the images by default */
+  .mySlides {
+    display: none;
+  }
+  
+  /* Next & previous buttons */
+  .prev {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 120%;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+   .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 120%;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  
+  /* Position the "next button" to the right */
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* On hover, add a black background color with a little bit see-through */
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  /* Caption text */
+  .text {
+    color: #f2f2f2;
+    font-size: large;
+    padding: 8px 2px;
+   position: absolute;
+    bottom: -20px;
+    width: 100%;
+    text-align: center;
+    background-color: #f5492f;
+  }
+  
+  /* Number text (1/3 etc) */
+  .numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+  }
+  
+  /* The dots/bullets/indicators */
+  .dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover {
+    background-color: #717171;
+  }
+  
+  /* Fading animation */
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+  .height-auto{
+    height: auto;
+  }
+
+
+/* =======廣告====== */
+.advertise-order{
+    width: 150px;
+    line-height: 300px;
+    background: linear-gradient(to top, gold, orange);
+    right: 0;
+    top: 20%;
+    margin-top: -40px;
+    color: white;
+    text-align: center;
+    font-size: 120% ;
+    transition: all 2s; /*轉變*/
+    box-shadow: 0 0 6px gray;
+}
+.advertise-order:hover{
+    width: 220px;
+    line-height: 600px ;
+    background-image: linear-gradient(to right bottom, #ff0000, #ffa500, #ffff00, #008000, #0000ff, #4b0082, #9400d3);
+    font-size: 300% ;
+    text-align: center;  
+}
+.position-fixed{
+    position: fixed;
+}
+.btn-s-order{
+    width: 30px;
+    line-height: 10px;
+    background-color: black;
+    right: 0;
+    top: 18%;
+    margin-top: -40px;
+    color: white;
+    text-align: center;
+    font-size: 16px ;
+    /* transition: all 2s; 轉變 */
+    box-shadow: 0 0 6px gray;
+}
+/* ========超連結 */
+a:hover, a:visited, a:link, a:active {
+    text-decoration: none;
+    color: black;
+    }
+
+.model-select{
+    font-size: xx-large;
+    border: 2px solid black;
+    padding: 10px 20px;
+    position: relative;
+    min-width: 200px;
+    text-decoration: none;
+    text-transform: uppercase;
+    -webkit-font-smoothing: antialiased;
+}
+.model-select:hover,.model-select:focus {
+    position: relative;
+    min-width: 200px;
+    border: 2px solid black;
+    /* color: #FFFFFF; */
+    font-size: xx-large;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    -webkit-font-smoothing: antialiased;
+    padding: 10px 20px;
+}
+.model-select span:nth-child(2),
+.model-select span:nth-child(3),
+.model-select span:nth-child(4),
+.model-select span:nth-child(5) {
+    content: "";
+    display: block;
+    position: absolute;
+    background-color: hsl(0, 0%, 0%);
+}
+.model-select span:nth-child(2) {
+    width: 1px;
+    left: 0;
+    bottom: 0;
+}
+.model-select span:nth-child(3) {
+    height: 1px;
+    left: 0;
+    top: 0;
+}/*top*/
+.model-select span:nth-child(4) {
+    width: 1px;
+    right: 0;
+    top: 0;
+}/*right*/
+.model-select span:nth-child(5) {
+    height: 1px;
+    right: 0;
+    bottom: 0;
+}/*bottom*/
+.model-select:hover {
+    border: none;
+}
+.model-select:hover span:nth-child(2) {
+    animation: move1 1500ms infinite ease;
+}
+.model-select:hover span:nth-child(3) {
+    animation: move2 1500ms infinite ease;
+}
+.model-select:hover span:nth-child(4) {
+    animation: move3 1500ms infinite ease;
+}
+.model-select:hover span:nth-child(5) {
+    animation: move4 1500ms infinite ease;
+}
+@keyframes move1 {
+    0% { height: 100%; bottom: 0; }
+    54% { height: 0; bottom: 100%; }
+    55% { height: 0; bottom: 0; }
+    100% { height: 100%; bottom: 0; }
+}
+@keyframes move2 {
+    0% { width: 0; left: 0; }
+    50% { width: 100%; left: 0; }
+    100% { width: 0; left: 100%; }
+}
+@keyframes move3 {
+    0% { height: 100%; top: 0; }
+    54% { height: 0; top: 100%; }
+    55% { height: 0; top: 0; }
+    100% { height: 100%; top: 0; }
+}
+@keyframes move4 {
+    0% { width: 0; right: 0; }
+    55% { width: 100%; right: 0; }
+    100% { width: 0; right: 100%; }
+}
+/* =============試試 */
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content/Box */
+  .modal-content {
+    background-color: rgb(252, 250, 237);
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 3px solid hwb(0 22% 78%);
+    width: 60%; /* Could be more or less, depending on screen size */
+    font-size: xx-large;
+}
+  
+  /* The Close Button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
